--- a/src/template.html
+++ b/src/template.html
@@ -14,7 +14,9 @@
   <body>
     <section id="section-content">
       <h1>Calorie Tracker</h1>
-      <div class="container"></div>
+      <div class="container">
+        <p>This is an item</p>
+      </div>
     </section>
   </body>
 </html>
