adding paragraph element

--- a/src/template.html
+++ b/src/template.html
@@ -16,6 +16,7 @@
       <h1>Calorie Tracker</h1>
       <div class="container">
         <p>This is an item</p>
+        <p>This is another item</p>
       </div>
     </section>
   </body>
