--- a/src/template.html
+++ b/src/template.html
@@ -16,7 +16,7 @@
       <h1>Calorie Tracker</h1>
       <div class="container">
         <p>This is an item</p>
-        <p>This is another item</p>
+        <p>This is a different paragraph item</p>
       </div>
     </section>
   </body>
