--- a/src/template.html
+++ b/src/template.html
@@ -17,6 +17,7 @@
       <div class="container">
         <p>This is an item</p>
         <p>This is a different paragraph item</p>
+        <p>This is a different paragraph item</p>
       </div>
     </section>
   </body>
