adding fourth p item

--- a/src/template.html
+++ b/src/template.html
@@ -18,6 +18,7 @@
         <p>This is an item</p>
         <p>This is a different paragraph item</p>
         <p>This is a different paragraph item</p>
+        <p>This is another different paragraph item</p>
       </div>
     </section>
   </body>
