--- a/src/template.html
+++ b/src/template.html
@@ -15,10 +15,7 @@
     <section id="section-content">
       <h1>Calorie Tracker</h1>
       <div class="container">
-        <p>This is an item</p>
-        <p>This is a different paragraph item</p>
-        <p>This is a different paragraph item</p>
-        <p>This is another different paragraph item</p>
+        <h2>adding an h2</h2>
       </div>
     </section>
   </body>
