--- a/src/template.html
+++ b/src/template.html
@@ -15,7 +15,7 @@
     <section id="section-content">
       <h1>Calorie Tracker</h1>
       <div class="container">
-        <p>Paragraph</p>
+        <p>Paragraph Two added now here</p>
       </div>
     </section>
   </body>
