--- a/src/template.html
+++ b/src/template.html
@@ -15,7 +15,10 @@
     <section id="section-content">
       <h1>Calorie Tracker</h1>
       <div class="container">
-        <p>Paragraph Two today</p>
+        <h3>I would like to try this addition</h3>
+        <h3>I would like to try this addition</h3>
+        <h3>I would like to try this addition</h3>
+        <h3>I would like to try this addition</h3>
       </div>
     </section>
   </body>
