--- a/src/template.html
+++ b/src/template.html
@@ -17,6 +17,7 @@
       <div class="container">
         <h3>I would like to try this addition</h3>
         <h3>I would like to try this addition</h3>
+        <h3>I would like to try this addition</h3>
       </div>
     </section>
   </body>
