--- a/src/template.html
+++ b/src/template.html
@@ -16,8 +16,7 @@
       <h1>Calorie Tracker</h1>
       <div class="container">
         <h3>I would like to try this addition</h3>
-        <h3>I would like to try this addition</h3>
-        <h3>I would like to try this addition</h3>
+        <h1>Cool stuff bro</h1>
       </div>
     </section>
   </body>
